css/admin_css/admin_Pos.css
/* ... */
  div.aLogo {
    float: left;
    position: relative;
    line-height: 80px;
    margin-top: 14px;
    margin-left: 40px;
  }

  nav ul {
    float: right;
    padding: 0;
    height: 80px;
    margin-bottom: 0;
    list-style: none;
    position: relative;
    text-align: center;
    z-index: 4;
  }

  nav ul li {
    /*Accounts, Election, Candidates, etc*/
    /* float: left; */
    display: inline-block;
    height: 80px;
    /*80px ang dati*/
    background: #1d6986;
    text-align: center;
    /* margin: 0 5px; */
    width: 150px;
  }

  nav ul li a {
    color: rgb(255, 255, 255);
    line-height: 70px;
    text-decoration: none;
    font-size: 1.2em;
    padding: 8px 15px;
    letter-spacing: 1px;
    font-family: Roboto Light, sans-serif;
  }

  nav ul li a:visited {
    color: #ffffff;
    text-decoration: none;
  }

  nav ul li a:hover {
    color: #ffc423;
    text-decoration: none;
  }

  nav ul li a:active {
    text-decoration: none;
  }

  nav ul li:hover {
    background-color: #124254;
  }

  nav ul li a:active {
    color: green;
  }

  nav ul ul {
    /*dropdown container*/
    position: absolute;
    top: 90px;
    border-top: 3px solid #124254;
    opacity: 0;
    visibility: hidden;
    transition: top .3s;
  }

  nav ul ul li {
    /*dropdown list*/
    height: 50px;
    position: relative;
    margin: 0px;
    float: none;
    display: list-item;
  }

  nav ul ul li a {
    line-height: 50px;
  }

  nav ul ul li .logout::before {
    content: "\f2f5";
    font-family: "Font Awesome 5 Free";
    padding: 0 10px 0 0;
  }

  nav ul ul li a:link {
    color: rgb(0, 0, 0);
  }

  nav ul ul li a:visited {
    color: black;
    text-decoration: none;
  }

  nav ul ul li a:hover {
    color: #1b1b1b;
    box-shadow: none;
    text-decoration: none;
  }

  nav ul ul li:hover {
    background-color: #e0a900;
    text-decoration: none;
  }

  nav ul ul li a:active {
    color: #1b1b1b;
    box-shadow: none;
    text-decoration: none;
  }

  nav ul ul ul {
    border-top: none;
  }

  nav ul ul ul li {
    position: relative;
    top: -60px;
    left: 150px;
  }

  nav ul li:hover>ul {
    top: 70px;
    opacity: 1;
    visibility: visible;
  }

  nav ul ul li {
    background: #ffc423;
    position: relative;
    margin: 0px;
    width: 150px;
    font-size: 0.8em;
    float: none;
    display: list-item;
    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
    z-index: 2;
  }

  nav ul ul li a {
    line-height: 50px;
    font-family: Roboto bold, sans-serif;
  }

  nav ul ul ul li {
    position: relative;
    font-size: 1em;
    top: -60px;
    left: 150px;
  }

  .Ashow, .ADicon {
    display: none
  }

  .nav-toggle1, .nav-toggle2, .nav-toggle3, .nav-toggle4, .nav-toggle5, .nav-toggle6, .nav-toggle7 {
    display: none;
  }

  /* .fa-plus{
    font-size: 15px;
    margin-left: 40px;
  } */

  @media all and (max-width: 968px) {
    nav ul {
      margin-right: 0px;
      margin-left: 0px;
      float: left;
    }
    nav .aLogo {
      margin-bottom: 3%;
      width: auto;
      float: left;
    }
    .Ashow+a, ul {
      display: none;
    }
    nav ul li, nav ul ul li {
      display: block;
      width: 100%;
    }
    nav ul li a:hover {
      box-shadow: none;
    }
    .Ashow {
      display: block;
      color: #ffffff;
      font-size: 1.2em;
      padding: 0 20px;
      line-height: 70px;
      cursor: pointer;
    }
    .Ashow:hover {
      color: white;
    }
    .ADicon {
      display: block;
      color: #ffffff;
      position: absolute;
      top: 0;
      right: 40px;
      line-height: 70px;
      cursor: pointer;
      font-size: 25px;
    }
    nav ul ul {
      top: 70px;
      border-top: 0px;
      border-bottom: 0px;
      float: none;
      position: static;
      display: none;
      opacity: 1;
      visibility: visible;
    }
    nav ul ul a {
      left: 0;
    }
    /* nav ul ul ul a{
      padding-left: 80px;
    }
    nav ul ul ul li{
      position: static;
    } */
    [id^=btn]:checked+ul {
      width: 100%;
      left: 0;
      display: block;
    }
    nav ul ul li {
      border-top: 0px;
      border-bottom: 0px;
    }
    span.cancel:before {
      content: '\f00d';
    }
  }

  p {
    font-size: 30px;
    font-weight: 500;
    font-family: Generica regular, sans-serif;
  }

  /* Container for flexboxes */

  section {
    display: -webkit-flex;
    display: flex;
    margin-left: 30px;
    margin-top: 100px;
    float: left;
  }

  article p {
    font-family: Roboto regular, sans-serif;
    color: white;
    font-weight: inherit;
    font-size: 20px;
    letter-spacing: 3px;
    position: relative;
  }

  article h1 {
    font-family: Generica regular, sans-serif;
    color: #ffc423;
    font-weight: inherit;
    font-size: 55px;
    position: relative;
    letter-spacing: 3px;
    margin-top: 10px;
  }

  /* Style the content */

  article {
    -webkit-flex: 3;
    -ms-flex: 3;
    flex: 3;
    padding: 10px;
  }

  /*For logos on top of welcome banner*/

  img.logos {
    float: left;
    padding-left: 10px;
    height: 90px;
    width: 100px;
    margin-bottom: 2em;
  }

  .logo-container {
    position: relative;
    /* float: left; */
    display: -webkit-flex;
    display: flex;
    margin-left: 0px;
    margin-top: 0px;
    max-width: 700px;
  }

  /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */

  @media (max-width: 600px) {
    body, section, #ADaside-container, #ADcountdown, #AD-CD-contents, .wrapper {
      -webkit-flex-direction: column;
      flex-direction: column;
    }
    .ADcountdown {
      font-size: auto;
    }
    #AD-CD-contents {
      display: block;
      font-size: auto;
    }
  }

  }
/* ... */

